Fixed number buttons having blue text on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,10 @@
   padding: 0;
 }
 
+.calc-container {
+  box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px, rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+}
+
 .display-container {
   padding: 0.5em;
   color: var(--color-white-text);
@@ -79,6 +83,7 @@ button {
 }
 
 .number {
+  color: var(--color-display);
   background-color: var(--color-number-bg);
 }
 
